Bug 15823 - subnet based interfaces definition not listening on all covered IP addresses
Summary: subnet based interfaces definition not listening on all covered IP addresses
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Other (show other bugs)
Version: 4.22.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-11 13:53 UTC by Björn Jacke
Modified: 2025-04-17 17:16 UTC (History)
2 users (show)

See Also:


Attachments
Patch for 4.22 and 4.21 cherry-picked from master (1.27 KB, patch)
2025-03-17 14:43 UTC, Ralph Böhme
martins: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Jacke 2025-03-11 13:53:14 UTC
if we have a network interface with multiple IP addresses, for example 192.168.2.10 and 192.168.3.10 and if we have a smb.conf network config like this:

interfaces = lo 192.168.0.0/16
bind interfaces only = yes

then we should listen on both of the mentioned 192.168.x.y addresses. This doesn't work though, we'll only listen on the first of those detected addresses.

Patch to follow...
Comment 1 Samba QA Contact 2025-03-12 01:33:13 UTC
This bug was referenced in samba master:

b85f056e7312ea9839b6fda617132fcc956da3c1
Comment 2 Ralph Böhme 2025-03-17 14:43:23 UTC
Created attachment 18611 [details]
Patch for 4.22 and 4.21 cherry-picked from master
Comment 3 Martin Schwenke 2025-03-17 21:41:32 UTC
Comment on attachment 18611 [details]
Patch for 4.22 and 4.21 cherry-picked from master

Hi Jule,

This is ready for 4.22 and 4.21.

Thanks...
Comment 4 Jule Anger 2025-03-18 14:26:45 UTC
Pushed to autobuild-v4-{22,21}-test.
Comment 5 Samba QA Contact 2025-03-18 16:51:30 UTC
This bug was referenced in samba v4-22-test:

b38c179898e4279dabb0ce88a099759c01543dea
Comment 6 Samba QA Contact 2025-03-20 14:51:14 UTC
This bug was referenced in samba v4-21-test:

9d9998a528bfb6b87650964035af23bc1fa32e77
Comment 7 Jule Anger 2025-03-24 09:47:16 UTC
Closing out bug report.

Thanks!
Comment 8 Samba QA Contact 2025-03-31 14:50:51 UTC
This bug was referenced in samba v4-21-stable (Release samba-4.21.5):

9d9998a528bfb6b87650964035af23bc1fa32e77
Comment 9 Samba QA Contact 2025-04-17 17:16:23 UTC
This bug was referenced in samba v4-22-stable (Release samba-4.22.1):

b38c179898e4279dabb0ce88a099759c01543dea